# TrajectoryCache-Mobility-Aware-Content-Caching-for-Vehicle-to-Everything-Named-Data-Networking

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SMOKE_TEST_REPORT.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
api/: main.py
configs/: highway_default.json  urban_default.json
docs/: EXPERIMENTS.md  SETUP.md
monitoring/: prometheus.yml
scenarios/s1_highway/: README.md
scenarios/s2_urban/: README.md
scripts/: run_evaluation.py  smoke_test.py
tests/integration/: test_api.py  test_simulation_pipeline.py
tests/unit/: test_bsm_listener.py  test_ctrv_predictor.py  test_mrs_eviction.py
trajectorycache/: __init__.py  config.py  demo.py
trajectorycache/baselines/: policies.py
trajectorycache/catalog/: generator.py
trajectorycache/core/: affinity_estimator.py  bsm_listener.py  content_store.py  ctrv_predictor.py  eviction_engine.py  mrs_scorer.py
trajectorycache/evaluation/: experiments.py  plots.py
trajectorycache/simulation/: sim_loop.py
