[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trajectorycache"
version = "1.0.0"
description = "Mobility-Aware Content Caching for NDN-based V2X Networks"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Ahmad Al-Rashidi"},
  {name = "Layla Mansour"},
  {name = "Omar Siddiqui"},
  {name = "Fatima Al-Zahrawi"},
]
keywords = ["NDN", "V2X", "caching", "vehicular", "mobility", "CTRV"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rtree>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "black>=24.0",
  "ruff>=0.3",
  "mypy>=1.8",
]
notebooks = [
  "jupyterlab>=4.0",
  "ipywidgets>=8.0",
  "pandas>=2.0",
  "seaborn>=0.13",
]

[project.urls]
Homepage = "https://github.com/trajectorycache/trajectorycache"
Documentation = "https://trajectorycache.readthedocs.io"
Repository = "https://github.com/trajectorycache/trajectorycache"
Issues = "https://github.com/trajectorycache/trajectorycache/issues"

[project.scripts]
trajectorycache-demo = "trajectorycache.demo:main"
trajectorycache-eval = "trajectorycache.evaluation.experiments:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trajectorycache*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=trajectorycache --cov-report=term-missing"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
